# recalibrator

./: .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configurar.sh  configure  configure.ac  ex_err_full.sh  ex_err_ph1.sh  ex_example_full.sh  ex_human_comp.sh  ex_human_full.sh  ex_human_ph1.sh  ex_human_ph2.sh  ex_test_full.sh  ex_test_ph1.sh  ex_test_ph2.sh
include/: aux_library.h  bam_recal_library.h  recal_common.h  recal_config.h  timestats.h
src/: Makefile.am  Makefile.in  asm_routines.c  asm_routines.h  bam.c  bamaux.c  bamaux.h  bampool.c  bampool.h  config.h  dummy.c  main.c  recal  recal.c  recal.h  recalibrate.c  timestats.c  timestats.h
src/aux_library/: Makefile.am  Makefile.in  aux_bam.c  aux_bam.h  aux_library.h  aux_math.c  aux_math.h  aux_misc.c  aux_misc.h  aux_quality.c  aux_vector.c  aux_vector.h  timestats.c  timestats.h
src/bam_recal/: Makefile.am  Makefile.in  bam_recal.c  bam_recal.h  bam_recal_library.h  data_collector.c  data_collector.h  recal_structs.c  recal_structs.h
src/common/: Makefile.am  Makefile.in  common.h  recal_config.h
src/timestats/: Makefile.am  Makefile.in  timestats.c
stats/: INSTRUCTIONS  Makefile.am  Makefile.in  stats_analysis.sh  stats_mean.sh  stats_plot.sh  stats_recollect.sh
tests/: Makefile.am  Makefile.in
tests/aux_library/: Makefile.am  Makefile.in  check_aux_bam  check_aux_library  check_aux_library.c  check_aux_library.h
tests/recal/: Makefile.am  Makefile.in  check_recal.c  check_recal.h
