noinst_LTLIBRARIES = librecal_aux.la
librecal_aux_la_SOURCES = aux_misc.c aux_bam.c aux_math.c aux_quality.c aux_vector.c timestats.c aux_bam.h aux_math.h aux_quality.h aux_misc.h aux_vector.h
include_HEADERS = $(top_builddir)/include/aux_library.h $(top_builddir)/include/timestats.h

#EXTRA_DIST = 

INCLUDES = -I$(top_builddir)/include