noinst_LTLIBRARIES = librecal_aux.la
librecal_aux_la_SOURCES = aux_misc.c aux_bam.c aux_math.c aux_quality.c aux_vector.c aux_bam.h aux_math.h aux_quality.h aux_misc.h aux_vector.h
include_HEADERS = $(top_builddir)/include/aux_library.h 
librecal_aux_la_LDFLAGS = -version-info 0:0:0

#EXTRA_DIST = 

INCLUDES = -I$(top_builddir)/include